# relacy

./: CMakeLists.txt  README.md
cmake/: relacyConfig.cmake.in
relacy/: atomic.hpp
relacy/fakestd/: thread
test/: atomic_wait_notify.cpp
